# multidms

./: .buildinfo  .gitignore  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  acknowledgments.html  biophysical_model.html  biophysical_model.ipynb  changelog.html  contributing.html  fit_delta_BA1_example.html  fit_delta_BA1_example.ipynb  genindex.html  index.html  installation.html  model-harv.ipynb  model.ipynb  multidms.biophysical.html  multidms.data.html  multidms.html  multidms.jaxmodels.html  multidms.model.html  multidms.model_collection.html  multidms.plot.html  multidms.utils.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  simulate_data.ipynb  simulation_validation.html
.github/workflows/: build_test_package.yml  docs_pages_workflow.yml  publish_package_pypi.yml
_sources/: changelog.rst.txt  contributing.rst.txt  index.rst.txt  installation.rst.txt  model_collection.nblink.txt  multidms.biophysical.rst.txt  multidms.data.rst.txt  multidms.jaxmodels.rst.txt  multidms.model.rst.txt  multidms.model_collection.rst.txt  multidms.plot.rst.txt  multidms.rst.txt  multidms.utils.rst.txt
docs/: Makefile  README.md  acknowledgments.rst  autodoc.rst  buildDocs.sh  conf.py  conf.py.orig  docs.bib  fit_delta_BA1_example.nblink  index.rst  installation.rst  simulation_validation.nblink
docs/_build/: html.tar
docs/_build/doctrees/: acknowledgments.doctree  autodoc.doctree  biophysical_model.doctree  contributing.doctree  environment.pickle  fit_delta_BA1_example.doctree  index.doctree  installation.doctree
docs/_build/doctrees/nbsphinx/: biophysical_model.ipynb  fit_delta_BA1_example.ipynb
docs/_build/html/: .buildinfo  acknowledgments.html  autodoc.html  biophysical_model.html  biophysical_model.ipynb  contributing.html  fit_delta_BA1_example.html  fit_delta_BA1_example.ipynb  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: autodoc.rst.txt  fit_delta_BA1_example.nblink.txt  index.rst.txt  installation.rst.txt
multidms/: __init__.py  biophysical.py  data.py  fit_sim_data.py  fit_sim_data_to_full.py  fit_sim_data_to_multi.py  jaxmodels.py  model.py  model_collection.py  multidms.py  plot.py  plot_sim_data.py  utils.py
notebooks/: 11-08-2022-Delta-BA1-BA2-analysis.ipynb  12-05-22-altair-test.ipynb  README.md  biophysical_model.ipynb  delta_omicron_fit.ipynb  fit-display-delta-omicron-example.ipynb  fit_delta_BA1_example.ipynb  fit_delta_BA2_example.ipynb  fit_omicron_delta.ipynb  fit_omicron_delta_data.ipynb  fit_pipeline.ipynb  fit_simulation_data.ipynb  func_score_df_delta_BA1_10K.csv  homolog-binarymap-example.ipynb  homolog_binarymap_example.ipynb  model-harv-ermine.ipynb  model-harv.ipynb  model_collection.ipynb  multiple-fit-exp.ipynb  omicron_delta_data_peek.ipynb  package_fit_pipeline.ipynb  param_transform_ref_equivariance_prototype.ipynb  sandbox-fit.ipynb  simulate_data.ipynb  simulation_manuscript_figures.ipynb  simulation_validation.ipynb  spike-analysis.ipynb  test_dump.pkl
notebooks/experiments/generalized_lasso_sigmoid_models/: fit_generalized_lasso.ipynb  nb_papermill.py  papermill_results.ipynb  params.json  run_papermill.sh
notebooks/jaxmodels/: collect_results.ipynb  jaxmodels.ipynb  jaxmodels_simulation_fits.ipynb  params.json  run_papermill.sh
results/: homolog_aa_seqs.json  simulated_mut_effects_v1.csv
results/Omicron_BA.2/: functional_selections.csv
scripts/: fit_sim.py  fit_sim_single.py  omicron_delta_data_peek.py  plot_sim_data.py
tests/: test_data.py  test_func_score.csv  test_jaxmodels.py
