# pyproject.toml

# Metadata
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multidms"
version = "0.1.5"
description = "Represent and model one or more dms experiments and identify variant predicted fitness, and individual mutation effects and shifts."
readme = "README.md"
authors = [
    { name = "Jared Galloway", email= "jgallowa@fredhutch.org" },
    { name = "Hugh Haddox", email = "hkhaddox@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "multidms", 
    "deep", 
    "mutational", 
    "scanning", 
    "dms", 
    "bloom", 
    "matsen"
]


# Software Dependencies
requires-python = ">=3.8"
dependencies = [
    "polyclonal",
    "jax",
    "jaxopt",
    "typing_extensions",
    "numpy",
    "pandas",
    "binarymap",
    "altair",
    "matplotlib",
    "seaborn",
    "notebook",
    "scipy",
    "tqdm",
    "ipywidgets",
    "pandarallel"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-pep8",
    "pytest-datadir",
    "pre-commit",
    "black",
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "nbsphinx_link",
    "bumpver",
    "sphinxcontrib-bibtex"
]

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
line-length = 89
extend-exclude = [
    "build",
    "dist",
    "docs/*",
    "notebooks/.*",
    "notebooks",
    "optimization_benchmarks",
    ".*",
]
ignore = [
    "D203",
    "D205",
    "D212",
    "D213",
    "D400",
    "D415",
    "D416",
    "D401"
]

# Poetry
[tool.poetry]
readme = "README.rst"

[project.urls]
# documentation = "https://matsengrp.github.io/multidms/"
repository = "https://github.com/matsengrp/multidms"

[tool.setuptools]
packages = ["multidms"]

[tool.bumpver]
current_version = "0.1.5"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"multidms/__init__.py" = ["{version}"]
#"README.md" = [
#    "{version}",
#]

