# pyproject.toml

# Metadata
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multidms"
version = "0.3.3"
description = "Joint modeling of multiple deep mutational scanning experiments."
readme = "README.md"
authors = [
    { name = "Jared Galloway", email= "jgallowa@fredhutch.org" },
    { name = "Hugh Haddox", email = "hkhaddox@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "multidms", 
    "deep", 
    "mutational", 
    "scanning", 
    "dms", 
    "bloom", 
    "matsen"
]


# Software Dependencies
requires-python = ">=3.9"
dependencies = [
    "polyclonal",
    "jax[cpu]==0.4.24",
    "jaxopt",
    "typing_extensions",
    "numpy",
    "pandas",
    "binarymap",
    "altair==5.1.2", # pandas convert_dtypes bug
    "matplotlib",
    "seaborn",
    "scipy",
    "tqdm",
    "pandarallel",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-pep8",
    "ruff~=0.0.289",
    "black~=23.3.0",
    "notebook",
    "sphinx",
    "nbsphinx",
    "nbsphinx_link",
    "bumpver",
    "sphinxcontrib-bibtex",
    "dms_variants",
    "ipywidgets"
]

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
line-length = 89
extend-exclude = [
    "build",
    "dist",
    "docs/*",
    "notebooks/.*",
    "notebooks",
    "optimization_benchmarks",
    ".*",
]
ignore = [
    "D203",
    "D205",
    "D212",
    "D213",
    "D400",
    "D415",
    "D416",
    "D401"
]

# Poetry
[tool.poetry]
readme = "README.rst"

[project.urls]
# documentation = "https://matsengrp.github.io/multidms/"
repository = "https://github.com/matsengrp/multidms"

[tool.setuptools]
packages = ["multidms"]

[tool.bumpver]
current_version = "0.3.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"multidms/__init__.py" = ["{version}"]
"docs/conf.py" = ['release = "{version}"']

