# pyproject.toml

# Metadata
[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multidms"
version = "1.1.0"
description = "Joint modeling of multiple deep mutational scanning experiments."
readme = "README.md"
authors = [
    { name = "Jared Galloway", email= "jgallowa@fredhutch.org" },
    { name = "Hugh Haddox", email = "hkhaddox@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "multidms",
    "generalized lasso",
    "deep", 
    "mutational", 
    "scanning", 
    "dms", 
    "bloom", 
    "matsen"
]


# Software Dependencies
requires-python = ">=3.9"
dependencies = [
    "polyclonal",
    "jax[cpu]>=0.4.29",
    "jaxopt",
    "typing_extensions",
    "numpy<=1.26.0",
    "pandas>=2.2.0",
    "binarymap",
    "altair==5.1.2", # pandas convert_dtypes bug
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "pylops",
    "pyproximal",
    "tqdm",
    "equinox",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-pep8",
    "ruff~=0.0.289",
    "black~=23.3.0",
    "notebook",
    # "sphinx",
    "sphinx==6.2.1",
    "sphinx-autoapi==3.0.0",
    "nbsphinx",
    "nbsphinx_link",
    "bumpver",
    "sphinxcontrib-bibtex",
    "dms_variants",
    "ipywidgets"
]

[tool.ruff]
pydocstyle.convention = "google"
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
line-length = 89
extend-exclude = [
    "build",
    "dist",
    "docs/*",
    "notebooks/.*",
    "notebooks",
    "optimization_benchmarks",
    ".*",
]
ignore = [
    "D203",
    "D205",
    "D212",
    "D213",
    "D400",
    "D415",
    "D416",
    "D401",
    "F722",
]

# Poetry
[tool.poetry]
readme = "README.rst"

[project.urls]
# documentation = "https://matsengrp.github.io/multidms/"
repository = "https://github.com/matsengrp/multidms"

[tool.setuptools]
packages = ["multidms"]

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"', 'version = "{version}"'
]
"multidms/__init__.py" = ["{version}"]
"docs/conf.py" = ['release = "{version}"']

